--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -3,7 +3,7 @@ ul {
     padding: 0;
     overflow: hidden;
     list-style-type: none;
-    background-color: #b34242;
+    background-color: #ff2020;
   }
   
   li {
@@ -18,11 +18,11 @@ ul {
   }
   
   li a:hover {
-    background-color: #cc5d4e;
+    background-color: #ff806f;
   }
   
   .activo {
-    background-color: #7d2b20;
+    background-color: #fc6b58;
   }
   
   .derecha {
@@ -32,7 +32,7 @@ ul {
   .miJumbo {
     margin-top: 1rem;
     padding: 32px 16px;
-    background-color: #e9ecef;
+    background-color: #fff2ef;
     border-radius: 0.5rem;
     text-align: center;
   }
